# websearch-api

./: .env.bak  .env.example  .gitignore  ADMIN_UI_STATUS.md  AUDIT_AND_USERSYNC.md  CREDENTIALS_NOTE.md  CSV_IMPORT_FIXED.md  CSV_IMPORT_GUIDE.md  CUSTOM_KEYWORDS.md  DASHBOARD_ENHANCEMENTS.md  DASHBOARD_FIELD_FIXES.md  DASHBOARD_FIX.md  DEPLOYMENT_MODES.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_GUIDE.md  Dockerfile  Dockerfile.dashboard  ENHANCEMENT_COMPLETE.md  FINAL_STATUS.md  GETTING_API_CREDENTIALS.md  GRAFANA_DASHBOARD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OTEL_FIXED.md  OTEL_STATUS.md  QUICKSTART.md  QUICKSTART_DASHBOARD.md  README.md  README_SCRIPTS.md  SEARCH_TEST_FIX.md  SETTINGS_GUIDE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USER_MANAGEMENT_COMPLETE.md  VERIFIED_WORKING.md  docker-compose.yml  index.html  otel-collector-config.yaml  prometheus.yml  pyproject.toml  run.sh  (+5 more)
.github/workflows/: version-bump.yml
admin-dashboard/: .env.example  .env.production  IMPLEMENTATION_STATUS.md  README.md  index.html  nginx.conf  package-lock.json  package.json
admin-dashboard/public/: sample_users.csv
admin-dashboard/src/: App.tsx  main.tsx
docs/: index.md
docs/admin/: installation.md  policy-management.md  user-management.md
docs/api/: reference.md
docs/guides/: integration.md  troubleshooting.md
docs/user/: authentication.md
grafana/dashboards/: dashboard-provider.yml  websearch-api-overview.json  websearch-api-overview.json.bak
k8s/: INGRESS_ACCESS.md  QUICKSTART.md  README.md  cleanup.sh  deploy.sh  port-forward.sh
k8s/base/: api-deployment.yaml  configmap.yaml  dashboard-deployment.yaml  grafana.yaml  ingress.yaml  jaeger.yaml  keycloak-secret.yaml  kustomization.yaml  mongodb.yaml  namespace.yaml  otel-collector.yaml  prometheus.yaml  redis.yaml
scripts/: bump_version.sh  create_admin.py  docker-entrypoint.sh  migrate_client_roles.py  start.sh
src/: __init__.py  main.py
src/core/: config.py  database.py  logging.py  telemetry.py
src/models/: api.py  (+4 more)
tests/: smoke_test.py  test_integration.py
(+52 files in other folders)
